--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.16.0",
+    "gsap": "^3.13.0",
+    "liquid-glass-container": "^1.0.11",
+    "liquid-glass-react": "^1.0.2",
+    "next": "15.3.3",
+    "pnpm": "^10.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "react-social-media-embed": "^2.5.18",
+    "react-twitter-embed": "^4.0.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
